[package]
name = "forklift"
version = "0.1.0"
edition = "2021"

[dependencies]
octocrab = "0.44"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
url = "2.5"
thiserror = "2"
http = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
